--- a/Mission_to_Mars/Templates/index.html
+++ b/Mission_to_Mars/Templates/index.html
@@ -21,11 +21,19 @@
     </div>
 
     <div class="row">
-        <div class="col-lg-12">
+        <div class="col-md-12">
             <h2>Latest Mars News</h2>
         </div>
-
     </div>
+<br>
+<div class="row">
+    <div class="col-md-12">
+        <h3>{{mars_info.news_title}}</h3>
+        <p>{{mars_info.news_p}}</p>
+    </div>
+</div>
+
+
 
     
 </body>
