--- a/Mission_to_Mars/Templates/index.html
+++ b/Mission_to_Mars/Templates/index.html
@@ -6,33 +6,85 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Mars Mission</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css')}}">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" 
+        crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" 
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" 
+        crossorigin="anonymous"></script>
     
 </head>
 
 <body>
-    <div class="container">
+    <div class="container-fluid p-0">
 
         <div class="jumbotron text-center">
-          <h1 class="font-weight bold">Mission to Mars</h1>
+          <h1 class="font-weight: bold">Mission to Mars</h1>
           <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Scrape New Data</a></p>
         </div>
     </div>
 
     <div class="row">
         <div class="col-md-12">
-            <h2>Latest Mars News</h2>
+            <h2 class="font-weight: bold"><u>Latest Mars News</u></h2>
         </div>
     </div>
-<br>
 <div class="row">
     <div class="col-md-12">
         <h3>{{mars_info.news_title}}</h3>
-        <p>{{mars_info.news_p}}</p>
+            <p>{{mars_info.news_p}}</p>
+    </div>
+</div>
+<hr>
+<div class="row">
+    <div class="col-md-8 border">
+        <h2 class=""><u>Featured Mars Image</u></h2>
+        <br>
+        <img class="col-md-12 border" src="{{mars_info.featured_image_url}}" alt="Mars Featured Image">
+    </div>
+    <div class="col-md-4">
+        
+        </br>
+        <div class="card">
+            <h3 class="font-weight: bold">Mars Facts</h3>
+                {{mars_info.html_table_mars_facts|safe}}
+        </div>     
+    </div>
+</div>
+<hr>
+<div class="row">
+    <div class="col-md-8 offset-4">
+        <h2 class="align-items-center"><u>Mars Hemispheres</u></h2>
+    </div>
+</div>
+<br>
+<div class="row">
+    {% for hemis in mars_info.hemisphere_images %}
+        <div class="col-md-6 border">
+            </br>
+                <div class="align-items-center">
+                    <img width="430 px" height="430 px" src="{{hemis.img_url}}">
+                </div>
+
+                <div>
+                    <h3>{{hemis.title}}</h3>
+                </div>
+        </div>
+    {% endfor %}
+
+</div>
+<br>
+<div>
+    <!--Footer Note-->
+    <div class="row">
+        <div class="col-md-4">@ Copyright UC Davis Bootcamp 2021</div>
     </div>
 </div>
 
+
+
+</body>
 
 
     
